--- CHANGELOG ---
--- PyFMI-FUTURE ---
    * Refactored internal files, this does affect a small number of secondary imports.
    * New function `get_unpacked_fmu_path` for the `FMUModel(CS|ME)X` classes. Returns
      the absolute path of the unpacked FMU.

--- PyFMI-2.16.3 ---
    * Changed default log and file size limitations from 2 GiB (2*1024**3) to 2 GB (2e9).
      Updated the corresponding error messages to correctly reference sizes in GB instead of GiB.
    * Clarified that the `filter` option only applies to model variables.
    * Fixed a bug introduced in PyFMI 2.15 where the diagnostics trajectory for CPU time was
      returned as CPU time per step instead of cumulative CPU time.

--- PyFMI-2.16.2 ---
    * Increased robustness of getting the `supports` attribute from ResultHandlers.
    * Fixed an Exception when using `dynamic_diagnostics` and scalar `atol`.
    * Updated FMIL used in GitHub workflows to version 3.0a4, updated setup.py to account for changes in FMIL.

--- PyFMI-2.16.1 ---
    * Fixed an issue with `get_variables_data` returning full trajectories when mixed with `get_variable_data` calls.

--- PyFMI-2.16.0 ---
    * Added verification against the available free disk space when storing the result on disk (i.e. a protection
      against running out of disk space).
    * Changed testing framework from `nose` to `pytest`.
    * Removed tests from the PyFMI installation.
    * Moved test files from src/pyfmi/tests/... to tests/files/...
    * Moved test_util.* from src/pyfmi/tests to src/pyfmi

--- PyFMI-2.15.0 ---
    * Changed custom result handling for the Master algorithm to instead use a single ResultHandler for each model.
      A dictionary of the form {model: ResultHandler} needs to be supplied to the option.
    * Added prediction of the size of the result to get early feedback if it will reach the limit or not.
    * Added option to limit the size of the result ("result_max_size"), default set to 2GB.